Добавил функцию тестов. Надо добавить проверки в неё

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,39 @@ function(COMPONENTS_LINK_COMPONENT TARGET_NAME COMPONENT_NAME)
 endfunction()
 
 
+# Components test adding function
+function(COMPONENTS_ADD_COMPONENT_TEST COMPONENT_NAME)
+    set(COMPONENT_NAME_TEST ${COMPONENT_NAME}_TEST)
+
+    add_executable(${COMPONENT_NAME_TEST})
+
+    file(GLOB TESTING_SOURCES "tests/*.cpp")
+    target_sources(${COMPONENT_NAME_TEST} PRIVATE ${TESTING_SOURCES})
+    target_include_directories(${COMPONENT_NAME_TEST} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")
+
+    get_target_property(COMPONENT_MODULE_LIBS ${COMPONENT_NAME} LINK_LIBRARIES)
+    target_link_libraries(
+        ${COMPONENT_NAME_TEST} PRIVATE
+        GTest::gtest_main
+        GTest::gtest
+        ${COMPONENT_MODULE_LIBS}
+    )
+
+    get_target_property(COMPONENT_MODULE_INCLUDES ${COMPONENT_NAME} INCLUDE_DIRECTORIES)
+    target_include_directories(
+        ${COMPONENT_NAME_TEST} PUBLIC
+        ${COMPONENT_MODULE_INCLUDES}
+    )
+
+    include(GoogleTest)
+    gtest_discover_tests(${COMPONENT_NAME_TEST})
+
+    # Надо же ему что-то использовать из модуля
+    COMPONENTS_LINK_COMPONENT(${COMPONENT_NAME_TEST} ${COMPONENT_NAME})
+    message(STATUS "[COMPONENTS] Added test: " ${COMPONENT_NAME_TEST})
+endfunction()
+
+
 
 # Component configuration function
 function(COMPONENTS_CONFIGURE_COMPONENT COMPONENT_NAME)
@@ -100,8 +133,14 @@ function(COMPONENTS_CONFIGURE_COMPONENT COMPONENT_NAME)
     if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/src")
         message(FATAL_ERROR "[COMPONENTS] Error configuring component! Not found sources dir: " "${CMAKE_CURRENT_SOURCE_DIR}/src")
     endif()
-
     target_include_directories(${COMPONENT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include")
+
+    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tests")
+        message(STATUS "[COMPONENTS] Searching for tests...")
+        enable_testing()
+        COMPONENTS_ADD_COMPONENT_TEST(${COMPONENT_NAME})
+    endif()
+
     message(STATUS "[COMPONENTS] Configured component: " ${COMPONENT_NAME})
 endfunction()
 
