CMake#fix: Исправил инсталляцию в рут

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,6 +150,7 @@ function(COMPONENTS_CONFIGURE_COMPONENT COMPONENT_NAME)
     add_library(${COMPONENT_NAME} SHARED)
     target_link_libraries(${COMPONENT_NAME} PRIVATE ${ARGN} )
 
+    get_property(COMPONENTS_INSTALL_PATH GLOBAL PROPERTY COMPONENTS_INSTALL_PATH)
     install(TARGETS ${COMPONENT_NAME}
         RUNTIME     DESTINATION ${COMPONENTS_INSTALL_PATH}
         LIBRARY     DESTINATION ${COMPONENTS_INSTALL_PATH}/lib
